gcc-9 (9.1.0-11) UNRELEASED; urgency=medium

  * Enable pgo/lto build on sparc64 (ok, when done on landau buildd).
  * Add initial gm2 packaging bits.

 -- Matthias Klose <doko@debian.org>  Thu, 18 Jul 2019 15:08:10 +0200

gcc-9 (9.1.0-10) unstable; urgency=medium

  * Fix typo in libstdc++ symbols file.

 -- Matthias Klose <doko@debian.org>  Wed, 17 Jul 2019 21:56:07 +0200

gcc-9 (9.1.0-9) unstable; urgency=medium

  * Update to SVN 20190717 (r273554) from the gcc-9-branch.
    - Fix PR c++/91125, PR c/91149, PR driver/90684, PR middle-end/78884,
      PR rtl-optimization/90756, PR tree-optimization/91063, PR ipa/91062,
      PR ipa/90982, PR tree-optimization/90972, PR debug/90914, PR debug/90900,
      PR lto/90369, PR rtl-optimization/91136, PR tree-optimization/91108,
      PR fortran/91077.

  [ Matthias Klose ]
  * Make the lto-verbose-linker patch more robust for hppa (Dave Anglin).
  * Avoid building stuff which is not needed for architecture independent
    packages. Addresses: #900554.
  * lib32gphobos-dev, libn32gphobos-dev: Remove dependency on non-existing
    libz-dev multilib packages.
  * Update libgfortran symbols files.
  * Update libstdc++ symbols files.

  [ Nicolas Boulenguez ]
  * Ada: update confirm_debian_bugs.py.
  * Ada: fully port 50b8286b from the gcc-8 branch to gcc-9.

 -- Matthias Klose <doko@debian.org>  Wed, 17 Jul 2019 21:53:24 +0200

gcc-9 (9.1.0-8) unstable; urgency=medium

  * Update to SVN 20190707 (r273175) from the gcc-9-branch.
  * Re-add a lost hunk to the add-kfreebsd patch (James Clarke).
  * Dump config files on failed jit and nvptx builds.
  * Disable the LTO builds on architectures where the buildds can't keep up.

 -- Matthias Klose <doko@debian.org>  Sun, 07 Jul 2019 12:10:25 +0200

gcc-9 (9.1.0-7) experimental; urgency=medium

  * Update to SVN 20190704 (r273081) from the gcc-9-branch.
    - Fix PR libstdc++/91067, PR tree-optimization/90892, PR middle-end/90899.