@@ -1,7 +1,11 @@
 gcc-9 (9.1.0-11) UNRELEASED; urgency=medium
 
+  [ Matthias Klose ]
   * Enable pgo/lto build on sparc64 (ok, when done on landau buildd).
   * Add initial gm2 packaging bits.
+
+  [ James Clarke ]
+  * ada-kfreebsd.diff: Fix fatal unreferenced formal parameter warnings.
 
  -- Matthias Klose <doko@debian.org>  Thu, 18 Jul 2019 15:08:10 +0200
 
